--- a/styles/globals.css
+++ b/styles/globals.css
@@ -57,3 +57,10 @@ a {
 .buttonStart:hover {
   opacity: 0.8;
 }
+
+
+.brute span {
+  display: inline-block;
+  min-width: 20px;
+  padding: 0 2px;
+}
